# Future-AGI

./: .env.example  .gitignore  .gitleaks.toml  .lintstagedrc.cjs  BRANCH_NAMING_CONVENTION.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  NOTICE  SECURITY.md  TESTING.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  package.json
futureagi/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.oss  Makefile  README.md  docker-compose.dev.yml  docker-compose.observability.dev.yml  docker-compose.observability.yml  docker-compose.peerdb.yml  docker-compose.sdk-test.yml  docker-compose.test-serving.yml  docker-compose.test.yml  dockerfile.base  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  uv.toml
futureagi/.github/: PULL_REQUEST_TEMPLATE.md
futureagi/.github/workflows/: pr-tests.yml
futureagi/accounts/: admin.py  apps.py  aws_marketplace_utils.py  base_data.py  urls.py  utils.py
futureagi/accounts/demo_dataset/: eval_config.json  experiment.json  img_dataset_data.json  run_prompt_config.json  table_data.json
futureagi/accounts/middleware/: require_2fa.py
futureagi/accounts/migrations/: 0001_initial.py  0002_user_config.py  0003_alter_authtoken_auth_type.py  0004_alter_user_organization_role_organizationmembership_and_more.py  0004_awsmarketplacecustomer.py  0005_orgapikey_workspace.py  0006_alter_organizationmembership_role_and_more.py  0006_merge_20250826_0917.py  0006_organization_ws_enabled_and_more.py  0007_alter_organizationmembership_role_and_more.py  0007_alter_orgapikey_options_and_more.py  0007_merge_20250903_1403.py  0008_merge_20250904_1413.py  0009_merge_20250905_1045.py  0009_merge_20250905_1157.py  0009_merge_20250905_1827.py  0010_merge_20250905_1241.py  0011_merge_20250908_0727.py  0012_user_goals_user_role.py  0013_alter_user_organization_role.py  0014_alter_orgapikey_type.py  0014_organization_region.py  0014_organization_require_2fa_and_more.py  0015_backfill_rbac_data.py  0016_merge_0014_0015.py  0016_merge_20260316_1144.py  0017_merge_0016_merge_0014_0015_0016_merge_20260316_1144.py  0018_add_eval_template_version.py  0018_blockedkeyproxy.py  0019_merge_20260407_1927.py
futureagi/accounts/models/: __init__.py  audit_log.py  auth_token.py  aws_marketplace.py  organization.py  organization_invite.py  organization_membership.py  recovery_code.py  totp_device.py  user.py  webauthn_credential.py  workspace.py
futureagi/accounts/serializers/: __init__.py  auth_token.py  aws_marketplace.py  org_api_key.py  organization.py  rbac.py  two_factor.py  user.py  workspace.py
futureagi/accounts/services/: aws_marketplace.py  aws_marketplace_metering.py  recovery_service.py  token_service.py  totp_service.py  two_factor_challenge.py  webauthn_service.py
futureagi/accounts/signals/: membership_signals.py
futureagi/accounts/templates/: alert_user.html  existing_user_invite.html  fail_autorecharge.html  invite_user.html  member_invite.html  reset_password.html  send_credentials.html  user_onboard.html  verify_email.html  waitlist_email.html
futureagi/accounts/tests/: test_2fa_enforcement.py  test_2fa_login_flow.py  test_config_endpoint.py  test_create_organization.py  test_cross_org_isolation.py  test_data_isolation_e2e.py  test_e2e_member_table_workspace.py  test_e2e_resend_reactivate.py  test_invite_login_workspace_e2e.py  test_keys.py  test_member_removal.py  test_multi_org.py  test_multi_org_auth.py  test_multi_org_endpoints.py  test_organization.py  test_passkeys.py  test_post_registration.py  test_signup.py  (+7 more)
futureagi/agent_playground/: urls.py
futureagi/agentcc/: admin.py  apps.py  org_config_defaults.py  permissions.py  tasks.py  urls.py  validators.py
futureagi/agentic_eval/: Makefile  conftest.py  docker-compose.yml  pytest.ini  requirements-test.txt  run_tests.py  setup.py
futureagi/ai_tools/: apps.py  base.py  error_codes.py  formatting.py  registry.py  resolvers.py  urls.py  validators.py  views.py
futureagi/analytics/: mixpanel_util.py  posthog_util.py  utils.py
futureagi/api_docs/: Create dummy data.bru  Delete Eval template.bru  Duplicate Eval template.bru  EvalPlayground test.bru  Get row data.bru  Get_base_eval_templates.bru  Get_eval_config.bru  Get_eval_feedback.bru  Project SDK code.bru  SeparateRunEval.bru  Subscription Plan.bru  Test Evaluation Template.bru  Update column config for eval logs.bru  acs.bru  auth0 login.bru  bruno.json  create custom model.bru  custom eval.bru  derived_datasets.bru  feedback template.bru  feedback-eval playground.bru  github callback.bru  google oauth.bru  idp-upload.bru  test-exp.bru  test-otel.bru  test.bru  testing api.bru  update Eval template.bru
futureagi/code-executor/: .dockerignore  Dockerfile  server.py
futureagi/config/: jaeger-ui-config.json  pgbouncer.ini
futureagi/evaluations/: constants.py
futureagi/integrations/: admin.py  schemas.py  urls.py
futureagi/mcp_server/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  mcp_app.py  oauth_provider.py  oauth_utils.py  session_manager.py  sse_lifecycle.py  urls.py  usage_helpers.py
futureagi/model_hub/: admin.py  apps.py  constants.py  urls.py
futureagi/model_serving/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.oss  Dockerfile.test  Makefile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
futureagi/saml2_auth/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py
futureagi/scripts/: peerdb-bulk-copy.sh  peerdb-init.sh  peerdb-setup-mirrors.sh  setup_peerdb_mirrors.sql  setup_pg_replication.sql
futureagi/sdk/: apps.py  urls.py
futureagi/simulate/: README.md  __init__.py  admin.py  apps.py  semantics.py  urls.py
futureagi/sockets/: consumer.py  ee_stub_consumer.py  routing.py  simulation_consumer.py
futureagi/tfc/: __init__.py  apps.py  asgi.py  celery.py  ee_gates.py  ee_loader.py  ee_stub.py  ee_stub_urls.py  routers.py  urls.py  wsgi.py
futureagi/tracer/: apps.py  handlers.py  otel_compat_urls.py  socket.py  urls.py
(+6192 files in other folders)
